core/src/test/resources/configurations/valid/instance-imbricated-3.instances
# Imbricated instances

instanceof vm {
	name: vm1;	# the VM name
	
	instanceof server {
		name: server;
		port: 9878;
		
		instanceof web-app1 {
			name: web-app1;
		}
	}
}

instanceof vm {
	name: vm2;	# the VM name
	
	instanceof server {
		name: server;
		port: 9878;
		
		instanceof osgi-container {
			name: osgi-container-app;
			
			instanceof bundle {
				name: my-bundle;
			}
		}
	}
}
