core/src/test/resources/configurations/invalid/instanceof-very-imbricated-invalid-end.instances
instanceof wrapper {
	instanceof vm {
		name: my-vm;
		instanceof server {
			name: server1;
		} instanceof toto {
	
		}
	}
	}